--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,9 +10,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+#frontend job
+  build_frontend:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./.github/frontend
 
     strategy:
       matrix:
@@ -26,8 +29,29 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - working-directory: ./.github/frontend
-    - run: pwd
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+
+#backend job
+  build_backend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./.github/backend
+
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
